@@ -33,6 +33,7 @@ FONT_TYPE = cv2.FONT_HERSHEY_SIMPLEX
 POPUP_HEIGHT = 50
 TITLE_BAR_HEIGHT = 50
 TEXT_COLOR = (255, 255, 255) if THEME == "Dark" else (0, 0, 0)
+DRAW_COLOR = (255, 255, 255) if THEME == "Dark" else (0, 0, 0)
 GRAYED_TEXT_COLOR = (155, 155, 155) if THEME == "Dark" else (100, 100, 100)
 BACKGROUND_COLOR = (28, 28, 28) if THEME == "Dark" else (250, 250, 250)
 TAB_BAR_COLOR = (47, 47, 47) if THEME == "Dark" else (231, 231, 231)
@@ -78,7 +79,7 @@ CUDA_INSTALLED = False
 CUDA_COMPATIBLE = False
 CUDA_DETAILS = None
 
-FILE_PATH = None
+FILE_PATH = ""
 CANVAS_CONTENT = []
 
 CANVAS_POSITION = None, None
